test/errors/scope-resolution/useImportUnknownSym.chpl
module M {
  var a : int = 3;
}

module N {
  import M.b;

  writeln("here");
  proc main() { }
}
