test/errors/scope-resolution/useImportUnknownSym.1.good
useImportUnknownSym.chpl:5: In module 'N':
useImportUnknownSym.chpl:6: error: cannot 'import' symbol 'b' as it is not defined in 'M'
